normalize tv recording objects

--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -790,5 +790,6 @@
     "OptionEnableFullscreen": "Enable Fullscreen",
     "ButtonServer": "Server",
     "HeaderAdmin": "Admin",
-    "HeaderLibrary": "Library"
+    "HeaderLibrary": "Library",
+    "HeaderMedia": "Media"
 }
