rework notifications flyout

--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -791,5 +791,6 @@
     "ButtonServer": "Server",
     "HeaderAdmin": "Admin",
     "HeaderLibrary": "Library",
-    "HeaderMedia": "Media"
+    "HeaderMedia": "Media",
+    "ButtonInbox": "Inbox"
 }
