adjust sync defaults when sync is supported

--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -751,7 +751,7 @@
     "LabelQuality": "Quality:",
     "HeaderSettings": "Settings",
     "OptionAutomaticallySyncNewContent": "Automatically sync new content",
-    "OptionAutomaticallySyncNewContentHelp": "New content added to this category will be automatically synced to the device.",
+    "OptionAutomaticallySyncNewContentHelp": "New content added to will be automatically synced to the device.",
     "OptionSyncUnwatchedVideosOnly": "Sync unwatched videos only",
     "OptionSyncUnwatchedVideosOnlyHelp": "Only unwatched videos will be synced, and videos will be removed from the device as they are watched.",
     "LabelItemLimit": "Item limit:",
@@ -792,5 +792,6 @@
     "HeaderAdmin": "Admin",
     "HeaderLibrary": "Library",
     "HeaderMedia": "Media",
-    "ButtonInbox": "Inbox"
+    "ButtonInbox": "Inbox",
+    "HeaderAdvanced":  "Advanced"
 }
