--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -800,5 +800,6 @@
     "HeaderYouSaid": "You Said...",
     "MessageWeDidntRecognizeCommand": "We're sorry, we didn't recognize that command.",
     "MessageIfYouBlockedVoice": "If you denied voice access to the app you'll need to reconfigure before trying again.",
-    "MessageNoItemsFound": "No items found."
+    "MessageNoItemsFound": "No items found.",
+    "ButtonManageServer": "Manage Server"
 }
